# unitree_description

./: CMakeLists.txt  README.md  clean_meshes_dir.py  colcon.pkg  convex_hull.py  display_robot.py  package.xml  vertex_histogram.py
model/g1/: g1.srdf  g1.urdf
model/g1/assets/collisions/: left_wrist_hand_collision.STL  pelvis_collision.STL  right_wrist_hand_collision.STL  torso_waist_roll_pitch_collision.STL
model/go2/: go2.srdf  go2.urdf
python/go2_description/: path.py.in
python/unitree_description/: loader.py  path.py.in
