<?xml version="1.0"?>
<package format="3">
  <name>unitree_description</name>
  <version>0.0.0</version>
  <description>Description files (urdf/srdf/...) for the Unitree Go2, calibrated to INRIA Paris instances of the robot.</description>

  <maintainer email="earlaud@inria.fr">EtienneAr</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/inria-paris-robotics-lab/unitree_description</url>

  <!-- The following tags are recommended by REP-136 -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <build_depend>git</build_depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</depend>
  <exec_depend>pinocchio</exec_depend>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>